--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@ ul.task-list li input[type="checkbox"] {
     
 <!-- main -->
 <div class="quarto-about-jolla">
-  <img src="profile.jpg" class="about-image
+  <img src="Me.jpg" class="about-image
   round " style="height: 15em; width: 15em;">
  <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
@@ -124,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>About this blog</p>
+<p>My name is Kaitlyn Schmeling and I am a senior at UNL, studying Sports Media and Mass Communications. Right now I am working for the Huskers Athletic Fund on their development team. I love all sports, especially baseball and volleyball. I am planning on continuing to work here post graduation!</p>
 
 
 </main> 
