--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-twitter"></i>
      <span class="about-link-text">Twitter</span>
   </a>
-  <a href="https://linkedin.com" class="about-link" rel="" target="">
+  <a href="https://linkedin.com/kaitlynschmeling" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
