--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
-<p>My name is Kaitlyn Schmeling and I am a senior at UNL, studying Sports Media and Mass Communications. Right now I am working for the Huskers Athletic Fund on their development team. I love all sports, especially baseball and volleyball. I am planning on continuing to work here post graduation!</p>
+<p>My name is Kaitlyn Schmeling and I am a senior at UNL, studying Sports Media and Mass Communications. Right now I am working for the Huskers Athletic Fund on their development team. I am planning on continuing to work here post graduation in May, working alongside their Premium Seating and Hospitality Director and Donor Relations Director! I love working in sports, especially the volleyball games and men’s basketball!</p>
 
 
 </main> 
@@ -134,7 +134,7 @@ ul.task-list li input[type="checkbox"] {
     <i class="bi bi-twitter"></i>
      <span class="about-link-text">Twitter</span>
   </a>
-  <a href="https://linkedin.com/kaitlynschmeling" class="about-link" rel="" target="">
+  <a href="https://linkedin.com" class="about-link" rel="" target="">
     <i class="bi bi-linkedin"></i>
      <span class="about-link-text">LinkedIn</span>
   </a>
