--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743705988160" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="101">
+<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743719362873" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="101">
 <div class="thumbnail">
 <p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p><a href="./posts/bigten_season_outcome/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/bigten_season_outcome/image.png" class="thumbnail-image"></p>
@@ -213,7 +213,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/bigten_season_outcome/index.html" class="no-external">Big Ten Volleyball Results</a>
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">2024 Big Ten Volleyball Season Results</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/bigten_season_outcome/index.html" class="no-external"></a>
