--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743719997101" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="122">
+<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1743721332614" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="170">
 <div class="thumbnail">
 <p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p><a href="./posts/bigten_season_outcome/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/bigten_season_outcome/image.png" class="thumbnail-image"></p>
@@ -230,7 +230,7 @@ nebraska
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/bigten_season_outcome/index.html" class="no-external">The Nebraska Volleyball team did not have the outcome that they were hoping for, falling short in the Final Four, let’s dive into stats from other teams comparing where…</a>
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">With almost a near perfect season the Husker Volleyball team had their eyes set on making it to the National Championship for the 2024 season. Sadly, the Nebraska Volleyball…</a>
 </div>
 </div>
 <div class="metadata">
