--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744325068591" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="699">
+<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744325531391" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="743">
 <div class="thumbnail">
 <p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p><a href="./posts/bigten_season_outcome/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/bigten_season_outcome/image.png" class="thumbnail-image"></p>
@@ -213,7 +213,7 @@ window.Quarto = {
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/bigten_season_outcome/index.html" class="no-external">What do the patterns between kills, service errors, and total attacks tell us about Nebraska’s performance in the 2024 Season?</a>
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">2024 Big Ten Women’s Volleyball</a>
 </h3>
 <div class="listing-subtitle">
 <a href="./posts/bigten_season_outcome/index.html" class="no-external"></a>
@@ -230,7 +230,7 @@ nebraska
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/bigten_season_outcome/index.html" class="no-external">With almost a near perfect season the Husker Volleyball team had their eyes set on making it to the National Championship for the 2024 season. Sadly, the Nebraska Volleyball…</a>
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">What do the patterns between kills, service errors, and total attacks tell us about Nebraska’s performance in the 2024 Season?</a>
 </div>
 </div>
 <div class="metadata">
