--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmlndGVu">bigten <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(1)</span></div><div class="category" data-category="dm9sbGV5YmFsbA==">volleyball <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="YmlndGVu">bigten <span class="quarto-category-count">(2)</span></div><div class="category" data-category="bmVicmFza2E=">nebraska <span class="quarto-category-count">(2)</span></div><div class="category" data-category="dm9sbGV5YmFsbA==">volleyball <span class="quarto-category-count">(2)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -205,7 +205,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744326295823" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="755">
+<div class="quarto-post image-right" data-index="0" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744326595313" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="761">
 <div class="thumbnail">
 <p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p><a href="./posts/bigten_season_outcome/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/bigten_season_outcome/image.png" class="thumbnail-image"></p>
@@ -230,7 +230,46 @@ nebraska
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/bigten_season_outcome/index.html" class="no-external">What do the patterns between kills, service errors, and total attacks tell us about Nebraska’s performance in the 2024 Season?</a>
+<a href="./posts/bigten_season_outcome/index.html" class="no-external"><!-- desc(5A0113B34292)[max=175]:posts/bigten_season_outcome/index.html --></a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">
+<div class="listing-date">
+Apr 1, 2025
+</div>
+<div class="listing-author">
+Kaitlyn Schmeling
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="YmlndGVuJTJDdm9sbGV5YmFsbCUyQ25lYnJhc2th" data-listing-date-sort="1743483600000" data-listing-file-modified-sort="1744326597441" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="761">
+<div class="thumbnail">
+<p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p><a href="./posts/bigten_season_outcome/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/bigten_season_outcome/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/bigten_season_outcome/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/bigten_season_outcome/index.html" class="no-external">2024 Big Ten Women’s Volleyball</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/bigten_season_outcome/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('YmlndGVu'); return false;">
+bigten
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('dm9sbGV5YmFsbA=='); return false;">
+volleyball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('bmVicmFza2E='); return false;">
+nebraska
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/bigten_season_outcome/index.html" class="no-external"><!-- desc(5A0113B34292)[max=175]:posts/bigten_season_outcome/index.html --></a>
 </div>
 </div>
 <div class="metadata">
