--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNwbGF5ZXJz" data-listing-date-sort="1744866000000" data-listing-file-modified-sort="1745966047220" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="522">
+<div class="quarto-post image-right" data-index="0" data-categories="bmNhYSUyQ2Jhc2tldGJhbGwlMkNwbGF5ZXJz" data-listing-date-sort="1744866000000" data-listing-file-modified-sort="1745966988756" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="5" data-listing-word-count-sort="891">
 <div class="thumbnail">
 <p><a href="./posts/ncaa_womens_basketball_stars/index.html" class="no-external"></a></p><a href="./posts/ncaa_womens_basketball_stars/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/ncaa_womens_basketball_stars/image.png" class="thumbnail-image"></p>
+<p><img loading="lazy" src="./posts/ncaa_womens_basketball_stars/IMAGE.jpg" class="thumbnail-image"></p>
 </a><p><a href="./posts/ncaa_womens_basketball_stars/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
